k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoicehub-backend-deploy
  namespace: invoicehub-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoicehub-backend
  template:
    metadata:
      name: invoicehub-backend-pod 
      labels:
        app: invoicehub-backend
    spec:
      containers:
      - name: invoicehub-backend-app
        image: somesh9021/invoicehub-backend:v1.0.0
        ports:
        - containerPort: 5219
        imagePullPolicy: Always
