k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: InvoiceHub-frontend-deploy
  namespace: invoicehub-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: InvoiceHub-frontend
  template:
    metadata:
      name: InvoiceHub-front-pod 
      labels:
        app: InvoiceHub-frontend
    spec:
      containers:
      - name: InvoiceHub-frontend-app
        image: somesh9021/invoicehub-frontend:v1.0.0
        ports:
        - containerPort: 80
