k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: invoicehub-ns

spec:
  selector:
    app: invoicehub-backend

  ports:
    - protocol: TCP
      port: 5219
      targetPort: 5219
      nodePort: 30501
  type: NodePort
