k8s/frontend-service copy.yml
kind: Service
apiVersion: v1
metadata:
   name: mongo
   namespace: InvoiceHub-ns

spec:
  selector:
     app: 

  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
    
  
  type: ClusterIP
