k8s/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
   name: frontend-service
   namespace: invoicehub-ns

spec:
  selector:
     app: invoiceHub-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
    
  
  type: ClusterIP
