k8s/mongo-service .yml
kind: Service
apiVersion: v1
metadata:
   name: mongo
   namespace: InvoiceHub-ns

spec:
  selector:
     app: mongodb

  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
    
  
  type: ClusterIP
